cluster/apps/networking/istio-system/gateways/external/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-gateway
  namespace: istio-system
  annotations:
    io.cilium/lb-ipam-ips: 10.0.0.4
    external-dns.alpha.kubernetes.io/target: external.akchristiansen.com
  labels:
    gateway: external
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: akchristiansen-com-tls
      allowedRoutes:
      namespaces:
        from: All
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
