cluster/apps/networking/istio-system/gateways/external/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-world-to-external"
  namespace: istio-system
spec:
  endpointSelector:
    matchLabels:
      istio.io/gateway-name: external-gateway
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: '80'
              protocol: TCP
            - port: '443'
              protocol: TCP
